Coloring TMS and (hopefully) fixing nag align issues with hi name

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,6 @@
     float: right;
 }
 
-.navbar-brand {
+#navbar-brand {
     color: #31708f;
 }
